--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
-    <header class="header">
+    <!-- header -->
+    <!-- <header class="header">
       <div class="header-inner container">
         <nav class="header-nav">
           <a href="./index.html" class="logo"
@@ -50,14 +52,18 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
+
     <main>
-      <section class="hero-section">
+      <!-- hero section -->
+      <!-- <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
+
+      <!-- advantages section -->
       <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Our Advantages</h2>
@@ -68,7 +74,7 @@
                   <use href="./images/icons.svg#icon-group"></use>
                 </svg>
               </div>
-              <h3 class="section-list-title">Strategy</h3>
+              <h3 class="advantages-list-title">Strategy</h3>
               <p class="section-list-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -80,7 +86,7 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="section-list-title">Punctuality</h3>
+              <h3 class="advantages-list-title">Punctuality</h3>
               <p class="section-list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -92,7 +98,7 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="section-list-title">Diligence</h3>
+              <h3 class="advantages-list-title">Diligence</h3>
               <p class="section-list-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -104,7 +110,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="section-list-title">Technologies</h3>
+              <h3 class="advantages-list-title">Technologies</h3>
               <p class="section-list-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -113,13 +119,19 @@
           </ul>
         </div>
       </section>
+
+      <!-- team section -->
       <section class="team-section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-list-item">
               <img
-                src="./images/mark-guerrero.jpg"
+                src="./images/team/mark-guerrero.jpg"
+                srcset="
+                  ./images/team/mark-guerrero.jpg    1x,
+                  ./images/team/mark-guerrero@2x.jpg 2x
+                "
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -161,7 +173,11 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/tom-ford.jpg"
+                src="./images/team/tom-ford.jpg"
+                srcset="
+                  ./images/team/tom-ford.jpg    1x,
+                  ./images/team/tom-ford@2x.jpg 2x
+                "
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -203,7 +219,11 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/camila-garcia.jpg"
+                src="./images/team/camila-garcia.jpg"
+                srcset="
+                  ./images/team/camila-garcia.jpg    1x,
+                  ./images/team/camila-garcia@2x.jpg 2x
+                "
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -245,7 +265,11 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/daniel-wilson.jpg"
+                src="./images/team/daniel-wilson.jpg"
+                srcset="
+                  ./images/team/daniel-wilson.jpg    1x,
+                  ./images/team/daniel-wilson@2x.jpg 2x
+                "
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -288,18 +312,43 @@
           </ul>
         </div>
       </section>
+
+      <!-- portfolio section -->
       <section class="portfolio-section">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-product">
-                <img
-                  src="./images/banking-app.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/banking-app_desk.jpg    1x,
+                      ./images/portfolio/banking-app_desk@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/banking-app_tab.jpg    1x,
+                      ./images/portfolio/banking-app_tab@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/portfolio/banking-app_mob.jpg    1x,
+                      ./images/portfolio/banking-app_mob@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/banking-app_desk.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -313,12 +362,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-product">
-                <img
-                  src="./images/cashless-payment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/cashless-payment_desk.jpg    1x,
+                      ./images/portfolio/cashless-payment_desk@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/cashless-payment_tab.jpg    1x,
+                      ./images/portfolio/cashless-payment_tab@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/portfolio/cashless-payment_mob.jpg    1x,
+                      ./images/portfolio/cashless-payment_mob@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/cashless-payment_desk"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -332,12 +404,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-product">
-                <img
-                  src="./images/meditation-app.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/meditation-app_desk.jpg    1x,
+                      ./images/portfolio/meditation-app_desk@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/meditation-app_tab.jpg    1x,
+                      ./images/portfolio/meditation-app_tab@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/portfolio/meditation-app_mob.jpg    1x,
+                      ./images/portfolio/meditation-app_mob@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/meditation-app_desk.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -351,12 +446,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-product">
-                <img
-                  src="./images/taxi-service.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/taxi-service_desk.jpg    1x,
+                      ./images/portfolio/taxi-service_desk@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/taxi-service_tab.jpg    1x,
+                      ./images/portfolio/taxi-service_tab@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/portfolio/taxi-service_mob.jpg    1x,
+                      ./images/portfolio/taxi-service_mob@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/taxi-service_desk.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -370,12 +488,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-product">
-                <img
-                  src="./images/screen-illusrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/screen-illusrations_desk.jpg    1x,
+                      ./images/portfolio/screen-illusrations_desk@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/screen-illusrations_tab.jpg    1x,
+                      ./images/portfolio/screen-illusrations_tab@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/portfolio/screen-illusrations_mob.jpg    1x,
+                      ./images/portfolio/screen-illusrations_mob@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/screen-illusrations_desk.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -389,12 +530,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-product">
-                <img
-                  src="./images/online-courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/online-courses_desk.jpg    1x,
+                      ./images/portfolio/online-courses_desk@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/online-courses_tab.jpg    1x,
+                      ./images/portfolio/online-courses_tab@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/portfolio/online-courses_mob.jpg    1x,
+                      ./images/portfolio/online-courses_mob@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/portfolio/online-courses_desk.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -410,7 +574,9 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+
+    <!-- footer -->
+    <!-- <footer class="footer">
       <div class="container footer-flex">
         <div class="footer-info">
           <a class="logo-footer" href="./index.html"
@@ -475,8 +641,10 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="backdrop is-hidden">
+    </footer> -->
+
+    <!-- modal -->
+    <!-- <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-close-button" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -559,6 +727,6 @@
           <button class="modal-submit-button" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
