add adaptive to hero section

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
 
   <body>
     <!-- header -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="header-inner container">
         <nav class="header-nav">
           <a href="./index.html" class="logo"
             >Web<span class="logo-accent">Studio</span></a
           >
+          <button class="mobile-menu" type="button">
+            <svg class="menu-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
           <ul class="header-list">
             <li class="header-list-item">
               <a class="nav-link nav-link-accent" href="./index.html">Studio</a>
@@ -52,16 +57,16 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- hero section -->
-      <!-- <section class="hero-section">
+      <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- advantages section -->
       <section class="advantages-section">
@@ -576,7 +581,7 @@
     </main>
 
     <!-- footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-flex">
         <div class="footer-info">
           <a class="logo-footer" href="./index.html"
@@ -641,7 +646,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- modal -->
     <!-- <div class="backdrop is-hidden">
