--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             >Web<span class="logo-accent">Studio</span></a
           >
           <button class="mobile-menu" type="button">
-            <svg class="menu-icon" width="24" height="24">
+            <svg class="menu-nav-icon" width="24" height="24">
               <use href="./images/icons.svg#icon-menu"></use>
             </svg>
           </button>
@@ -649,7 +649,7 @@
     </footer>
 
     <!-- modal -->
-    <!-- <div class="backdrop is-hidden">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-button" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -724,14 +724,77 @@
                 <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-accept"></use>
                 </svg> </span
-              >I accept the terms and conditions of the
-
-              <a class="privacy-link" href="">Privacy Policy</a></label
+              ><span class="checkbox-text"
+                >I accept the terms and conditions of the
+                <a class="privacy-link" href="">Privacy Policy</a></span
+              ></label
             >
           </div>
           <button class="modal-submit-button" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
+
+    <!-- mobile menu -->
+    <div class="menu-container">
+      <button class="menu-close-button" type="button">
+        <svg class="menu-close-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <ul class="mobile-menu-list">
+        <li class="mobile-menu-item">
+          <a href="" class="mobile-menu-link current">Studio</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="" class="mobile-menu-link">Portfolio</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="" class="mobile-menu-link">Contacts</a>
+        </li>
+      </ul>
+      <ul class="mobile-menu-contacts">
+        <li class="menu-contacts-item">
+          <a class="menu-contacts-link current" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+        <li class="menu-contacts-item">
+          <a class="menu-contacts-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="menu-socials">
+        <li class="menu-social-item">
+          <a href="" class="menu-icon-bg">
+            <svg class="menu-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-social-item">
+          <a href="" class="menu-icon-bg">
+            <svg class="menu-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-social-item">
+          <a href="" class="menu-icon-bg">
+            <svg class="menu-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="menu-social-item">
+          <a href="" class="menu-icon-bg">
+            <svg class="menu-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
