--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767.98px)"
                     srcset="
                       ./images/portfolio/banking-app_mob.jpg    1x,
                       ./images/portfolio/banking-app_mob@2x.jpg 2x
@@ -383,7 +383,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 320px)"
+                    media="((max-width: 767.98px))"
                     srcset="
                       ./images/portfolio/cashless-payment_mob.jpg    1x,
                       ./images/portfolio/cashless-payment_mob@2x.jpg 2x
@@ -425,7 +425,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 320px)"
+                    media="((max-width: 767.98px))"
                     srcset="
                       ./images/portfolio/meditation-app_mob.jpg    1x,
                       ./images/portfolio/meditation-app_mob@2x.jpg 2x
@@ -467,7 +467,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 320px)"
+                    media="((max-width: 767.98px))"
                     srcset="
                       ./images/portfolio/taxi-service_mob.jpg    1x,
                       ./images/portfolio/taxi-service_mob@2x.jpg 2x
@@ -509,7 +509,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 320px)"
+                    media="((max-width: 767.98px))"
                     srcset="
                       ./images/portfolio/screen-illusrations_mob.jpg    1x,
                       ./images/portfolio/screen-illusrations_mob@2x.jpg 2x
@@ -551,7 +551,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767.98px)"
                     srcset="
                       ./images/portfolio/online-courses_mob.jpg    1x,
                       ./images/portfolio/online-courses_mob@2x.jpg 2x
